--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     I18N::String - Delay I18N translation until a variable is stringified
 
 VERSION
-    version 0.01
+    version 0.02
 
 SYNOPSIS
         use I18N::String qw('_');
@@ -41,6 +41,15 @@ USAGE
     You need to set this once, and it is global. This is the function that
     will be called when your variable is stringified, to return the
     localized version.
+
+  loc()
+    You can also store strings that require arguments, eg:
+
+        $str = _('I found [quant,_1,file,files]');
+
+    And stringify them via:
+
+        $str->loc(@args);
 
 SUPPORT
     You can find documentation for this module with the perldoc command.
